--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ header
 	display: flex;
 	justify-content: center;
 	font-size: 2em;
-	width: 100%;
+	padding: 10px;
 	height: 60px;
 	margin: auto;
 	padding-top: 15px;
@@ -15,6 +15,8 @@ header
 body
 {
 	margin: 0;
+	padding: 0;
+	position: relative;
 	
 }
 
@@ -115,7 +117,8 @@ body
 	font-size: 20px;
 	color: #00cc44;
 }
-.prochainement .dot {
+.prochainement .dot /*animation typing dot*/
+{   
 	display: inline-block;
 	width: 5px;
 	height: 5px;
@@ -142,18 +145,19 @@ body
 	}
 }
 
-p:hover
+.opacity:hover /*animation zoom opacity*/
 {
 	
 	transform: scale(1.1);
 	transition: .6s;
 	animation: ease-in-out;
-	opacity: 0.5;
+	opacity: 1.5;
 
 }
-p, 
+.opacity
 {
 	text-align: center;
+	opacity: 0.7;
 }
 .center
 {
@@ -171,9 +175,10 @@ p,
 .prochainement
 {
 	width: 15%;
-	padding: 10px;
+	padding: 5px;
 	margin:auto;
-	margin-top: 40px;
+	margin-top: 30px;
+	margin-bottom: 80px;
 	text-align: center;
 	background-color: #389c75;
 	color: #ffd633;
@@ -188,14 +193,15 @@ footer
 	justify-content: space-between;
 	font-size: 1em;
 	width: 100%;
-	height: 35px;
+	margin-top: 5px;
 	margin: auto;
-	margin-top: 20px;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	padding: 5px;
 	background-color: #389c75;
 	color: #ffd633;
 	font-family: 'Roboto', sans-serif;
+	position: fixed;
+	bottom: 0;
+	
 }
 
 .center
@@ -208,8 +214,9 @@ footer
 	margin-right: 15px;
 	margin-top: 15px;
 	margin-left: 5px;
+	padding: 1px;
 }
-.btn_mentions:hover, .btn_contact:hover
+.btn_mentions:hover, .btn_contact:hover /*animation wiggle footer*/
 {
 	
 	animation-name:wiggle;
@@ -253,20 +260,33 @@ a
 		margin: auto;
 	}
 	.menu_a, .menu_b, .menu_c, .menu_d
+	
 	{
+		width: 95%;
 		
-		margin: 80px;
-		width: 50%;
-		margin-top: 20px;
-		margin-bottom: 20px;
+	}
+	p, .btn_mentions, .btn_contact
+	{
+		font-size: 1em;
+	}
+	.note, .goût, .delices, .chic
+	{
+		font-size: 1.2em;
+	}
+	header
+	{
+		font-size: 3em;
 	}
 
 	.prochainement
 	{
-		
-		width: 50%;
-		height: 30px;
-
+	
+		width: 60%;
+		margin-bottom: 140px;
+	}
+	footer
+	{
+		display: block;
 	}
 }
 
@@ -278,13 +298,19 @@ a
 		justify-content: space-around;
 		flex-wrap: wrap;
 
+
+
 		
 	}
 	.menu_a, .menu_b, .menu_c, .menu_d
 	{
-		width: 35%;
+		width: 50%;
 	}
-
+	.note, .chic, .delices, .goût
+	{ 
+		font-size: 2em; 
+	}
+	
 	body
 	{
 		margin: 0;
