--- a/style_menu_a.css
+++ b/style_menu_a.css
@@ -8,15 +8,16 @@ body
 header /*ohmyfood logo*/
 {
 	display: flex;
-	justify-content: center;
-	font-size: 2em;
-	width: 100%;
-	height: 60px;
-	margin: auto;
-	background-color: #389c75;
-	color: #ffd633;
-	align-self: center;
+  justify-content: center;
+  font-size: 2em;
+  padding: 10px;
+  height: 60px;
+  margin: auto;
+  padding-top: 15px;
   font-family: 'Roboto', sans-serif;
+  background-color: #389c75;
+  color: #ffd633;
+  align-self: center;
 }
 
 h1
@@ -30,23 +31,31 @@ h1
 h2
 {
   text-align: center;
-  margin-top: 100px;
+  padding-top: 20px;
   font-family: 'Devonshire', cursive;
  background-color: linear-gradient( #1858ed,#18ed38);
 }
 h3
 {
   text-align: center;
+  font-size: 1.4em;
 }
 #container
 {
     
   width: 60%;
-  height:1000px;
   margin: auto;
-  margin-top: 30px;
-  border:2px solid transparent;
-  background-color: #ffcccc;
+  margin-top: 80px;
+  margin-bottom: 80px;
+ 
+  background-color:#ffe6e6;
+}
+img
+{
+  width: 20%;
+  margin: 0;
+  padding-right: 40px;
+  padding-left: 40px;
 }
 .fa-music
 {
@@ -60,14 +69,18 @@ h3
 p
 {
   font-family: 'Caveat', cursive;
-  font-size: 18px;
+  font-size: 1.3em;
 }
 
-.entree, .plat, .dessert
+.entree, .dessert, .plat
 {
   display: flex;
   justify-content: space-around;
 }  
+
+
+
+
 
 
 a
@@ -76,25 +89,58 @@ a
   color: inherit;
 }
 
-.foot
+h4
 {
   font-family: 'Devonshire', cursive;
+  padding: 40px;
+  margin: 5px;
+  
+  text-align: center;
+  font-size: 1.5em;
 }
 
 
 
-.title:after { /*underline animation*/
+.prelude:after { /*underline animation*/
   content: '';
-  display: block;
-  margin-left: 40%;
+  display: flex;
   height: 1px;
   width: 0;
+  margin-left: 45%;
   background: transparent;
-  transition: width .5s ease, background-color .5s ease;
+  transition: width .7s ease, background-color .7s ease;
 }
-.title:hover:after
+.prelude:hover:after
 {
-  width: 20%;
+  width: 10%;
+  background: #444;
+}
+.point:after { /*underline animation*/
+  content: '';
+  display: flex;
+  height: 1px;
+  width: 0;
+  margin-left: 41%;
+  background: transparent;
+  transition: width .7s ease, background-color .7s ease;
+}
+.point:hover:after
+{
+  width: 18%;
+  background: #444;
+}
+.final:after { /*underline animation*/
+  content: '';
+  display: flex;
+  height: 1px;
+  width: 0;
+  margin-left: 39%;
+  background: transparent;
+  transition: width .7s ease, background-color .7s ease;
+}
+.final:hover:after
+{
+  width: 23%;
   background: #444;
 }
 .btn_contact,.btn-mentions
@@ -134,14 +180,35 @@ footer
   justify-content: space-between;
   font-size: 1em;
   width: 100%;
-  padding: 10px;
+  margin-top: 5px;
   margin: auto;
+  padding: 5px;
   background-color: #389c75;
   color: #ffd633;
   font-family: 'Roboto', sans-serif;
   position: fixed;
   bottom: 0;
 }
+@media screen and (max-width: 425px)/*responsive design mobile*/
+{
+  body
+  {
+    margin: 0;
+    background-color:#ffe6e6;
+  }
+  .container
+  {
+    width: 100%;
+    margin: 0;
+  }
+  img
+  {
+    display: none;
+  }
+  
+
+}
+
 
 
   
