--- a/style_menu_b.css
+++ b/style_menu_b.css
@@ -10,51 +10,51 @@ body
 header /*ohmyfood logo*/
 {
 	display: flex;
-	justify-content: center;
-	font-size: 2em;
-	width: 100%;
+  justify-content: center;
+  font-size: 2em;
+  padding: 10px;
   height: 60px;
-  margin-top: 25px;
-  
-	margin: auto;
-	background-color: #389c75;
-	color: #ffd633;
-	align-self: center;
+  margin: auto;
+  padding-top: 15px;
   font-family: 'Roboto', sans-serif;
+  background-color: #389c75;
+  color: #ffd633;
+  align-self: center;
   
  }
 
 #container /*Main menu*/
 {
   	
-  	width: 60%;
-  	height:1000px;
-  	margin: auto;
-  	margin-top: 30px;
+  width: 60%;
+  height:1000px;
+  margin: auto;
+  margin-top: 30px;
+
     
 }
 img
-{width: 15%;
+{
+  width: 15%;
 }
  
 h1
 {
-  	text-align: center;
-  	margin: auto;
-  	padding-top: 50px;
-  	font-family: 'Croissant One', cursive;
-  	background: linear-gradient( #ff0000,#ff9900,#8080ff);
-  	-webkit-text-fill-color: transparent;
-  	-webkit-background-clip: text;
-
+  text-align: center;
+  margin: auto;
+  padding-top: 50px;
+  font-family: 'Croissant One', cursive;
+  background: linear-gradient( #ff0000,#ff9900,#8080ff);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
 }
 
 h2
 {
-  	text-align: center;
-  	margin-top: 100px;
-  	font-family: 'Roboto Slab', serif;
-  	font-size: 1.3em;
+  text-align: center;
+  margin-top: 100px;
+  font-family: 'Roboto Slab', serif;
+  font-size: 1.2em;
 }
 
 p
@@ -64,57 +64,83 @@ p
 }
 a
 {
-  	text-decoration: none;
-  	color: inherit;
+  text-decoration: none;
+  color: inherit;
 }  
 
 
 .entree, .plat, .dessert
 {
-  	display: flex;
-  	justify-content: space-between;
-  	margin-left : 80px;
-  	margin-right: 80px;
+  display: flex;
+  justify-content: space-between;
+  margin-left : 80px;
+  margin-right: 80px;
+  font-size: 1.2em;
 }
-.entree
+
+.entree,.orange
 {
 	color: #cc5200;
 }
-.plat
+.plat,.violet
 {
 	color: #ac00e6;
 }
-.dessert
+.dessert,.mauve
 {
 	color: #6600ff;
 }
 
-.orange
+img
 {
-	color: #cc5200;
-}
-.violet
-{
-	color: #ac00e6;
-}
-.mauve
-{
-	color: #6600ff;
-}
- 
-.title:after { /*underline animation*/
-    content: '';
-    display: block;
-    margin-left: 40%;
-    height: 1px;
-    width: 0;
-    background: transparent;
-    transition: width .5s ease, background-color .5s ease;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
-.title:hover:after {
-    width: 20%;
-    background: #444;
+.orange:after { /*underline animation*/
+  content: '';
+  display: block;
+  margin-left: 35%;
+  height: 1px;
+  width: 0;
+  background: transparent;
+  transition: width .7s ease, background-color .7s ease;
+}
+
+.orange:hover:after 
+{
+  width: 30%;
+  background:#cc5200;
+}
+.violet:after { /*underline animation*/
+  content: '';
+  display: block;
+  margin-left: 39%;
+  height: 1px;
+  width: 0;
+  background: transparent;
+  transition: width .7s ease, background-color .7s ease;
+}
+
+.violet:hover:after 
+{
+  width: 23%;
+  background:#ac00e6;
+}
+.mauve:after { /*underline animation*/
+  content: '';
+  display: block;
+  margin-left: 36%;
+  height: 1px;
+  width: 0;
+  background: transparent;
+  transition: width .7s ease, background-color .7s ease;
+}
+
+.mauve:hover:after 
+{
+  width: 28%;
+  background:#6600ff;
 }
 .btn_contact,.btn-mentions
 {
@@ -123,40 +149,39 @@ a
 
 .btn_mentions:hover, .btn_contact:hover/*wiggle animation*/
 {
-  
-  	animation-name:wiggle;
-  	animation-duration:1000ms;
-  	animation-iteration-count:1;
-  	animation-timing-function:1;
+  animation-name:wiggle;
+  animation-duration:1000ms;
+  animation-iteration-count:1;
+  animation-timing-function:1;
 }
 
 @keyframes wiggle 
 {
  	0% {transform: rotate(1deg);}
-    5% {transform: rotate(-1deg);}
-  	10%{transform: rotate(5deg);}
-  	15%{transform: rotate(-5deg);}
-  	20%{transform: rotate(1deg);}
-  	25% {transform: rotate(-1deg);}
-  	40%{transform: rotate(5deg);}
-  	45%{transform: rotate(-5deg);}
-  	50% {transform: rotate(10deg);}
-  	60%{transform: rotate(-10deg);}
-  	75% {transform: rotate(-5deg);}
-  	100% {transform: rotate(0deg);}
+  5% {transform: rotate(-1deg);}
+  10%{transform: rotate(5deg);}
+  15%{transform: rotate(-5deg);}
+  20%{transform: rotate(1deg);}
+  25% {transform: rotate(-1deg);}
+  40%{transform: rotate(5deg);}
+  45%{transform: rotate(-5deg);}
+  50% {transform: rotate(10deg);}
+  60%{transform: rotate(-10deg);}
+  75% {transform: rotate(-5deg);}
+  100% {transform: rotate(0deg);}
 }
 
 footer
 {
 	display: flex;
   justify-content: space-between;
-	font-size: 1em;
-	width: 100%;
-  height: 35px;
+  font-size: 1em;
+  width: 100%;
+  margin-top: 5px;
   margin: auto;
-  padding: 10px;
+  padding: 5px;
   background-color: #389c75;
-	color: #ffd633;
+  color: #ffd633;
   font-family: 'Roboto', sans-serif;
   position: fixed;
   bottom: 0;
