--- a/style_menu_c.css
+++ b/style_menu_c.css
@@ -8,15 +8,16 @@ body
 header /*ohmyfood logo*/
 {
 	display: flex;
-	justify-content: center;
-	font-size: 2em;
-	width: 100%;
-	height: 60px;
-	margin: auto;
-	background-color: #389c75;
-	color: #ffd633;
-	align-self: center;
+  justify-content: center;
+  font-size: 2em;
+  padding: 10px;
+  height: 60px;
+  margin: auto;
+  padding-top: 15px;
   font-family: 'Roboto', sans-serif;
+  background-color: #389c75;
+  color: #ffd633;
+  align-self: center;
  }
 
 h1
@@ -33,13 +34,15 @@ h1
    
 }
 
+
 #container
 {
   width: 60%;
   height:1000px;
   margin: auto;
   margin-top: 50px;
-  background-color:#d1e0d5;
+  margin-bottom: 80px;
+  background-color: #f0f5f5;
 }
 
 .entree, .plat, .dessert
@@ -52,7 +55,13 @@ h1
 p
 {
   font-family: 'Caveat', cursive;
-  font-size: 1.1em;
+  font-size: 1.3em;
+}
+img
+{ 
+  width: 20%;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 a
@@ -61,10 +70,12 @@ a
   color: inherit;
 }
 
-.title
+.title, h2
 {
   text-align: center;
   font-size: 1.4em;
+  font-family: 'Caveat', cursive;
+  font-style: none;
 
 }
 
@@ -118,8 +129,9 @@ footer
   justify-content: space-between;
   font-size: 1em;
   width: 100%;
-  padding: 10px;
+  margin-top: 5px;
   margin: auto;
+  padding: 5px;
   background-color: #389c75;
   color: #ffd633;
   font-family: 'Roboto', sans-serif;
