--- a/style_menu_d.css
+++ b/style_menu_d.css
@@ -8,15 +8,16 @@ body
 header /*ohmyfood logo*/
 {
 	display: flex;
-	justify-content: center;
-	font-size: 2em;
-	width: 100%;
-	
-	margin: auto;
-	background-color: #389c75;
-	color: #ffd633;
-	align-self: center;
+  justify-content: center;
+  font-size: 2em;
+  padding: 10px;
+  height: 60px;
+  margin: auto;
+  padding-top: 15px;
   font-family: 'Roboto', sans-serif;
+  background-color: #389c75;
+  color: #ffd633;
+  align-self: center;
  }
 
 #container
@@ -31,6 +32,8 @@ h1
 {
   text-align: center;
   margin: auto;
+  margin-bottom: 50px;
+  font-size: 3em;
   font-family: 'Kaushan Script', cursive;
   background: linear-gradient( #003311,#bbff33,#66ff99);
   -webkit-text-fill-color: transparent;
@@ -64,16 +67,59 @@ a
   color: inherit;
 }
 
-.title:after { /*underline animation*/
+img
+{
+  width: 35%;
+  padding-left:  10px;
+  padding-right: 10px;
+}
+.left
+{
+  padding-left: 50px;
+}
+.right
+{
+  padding-right: 50px;
+}
+
+.esquisse:after { /*underline animation*/
+  content: '';
+  display: block;
+  margin-left: 45%;
+  height: 1px;
+  width: 0;
+  background: transparent;
+  transition: width .7s ease, background-color .7s ease;
+}
+.esquisse:hover:after
+{
+  width: 10%;
+  background: #444;
+}
+.oeuvre:after { /*underline animation*/
+  content: '';
+  display: block;
+  margin-left: 41%;
+  height: 1px;
+  width: 0;
+  background: transparent;
+  transition: width .7s ease, background-color .7s ease;
+}
+.oeuvre:hover:after
+{
+  width: 18%;
+  background: #444;
+}
+.art:after { /*underline animation*/
   content: '';
   display: block;
   margin-left: 40%;
   height: 1px;
   width: 0;
   background: transparent;
-  transition: width .5s ease, background-color .5s ease;
+  transition: width .7s ease, background-color .7s ease;
 }
-.title:hover:after
+.art:hover:after
 {
   width: 20%;
   background: #444;
@@ -115,9 +161,9 @@ footer
   justify-content: space-between;
   font-size: 1em;
   width: 100%;
-  height: 35px;
+  margin-top: 5px;
   margin: auto;
-  margin-top: 25px;
+  padding: 5px;
   background-color: #389c75;
   color: #ffd633;
   font-family: 'Roboto', sans-serif;
