--- a/style_menu_c.css
+++ b/style_menu_c.css
@@ -37,8 +37,8 @@ h1
 
 #container
 {
-  width: 60%;
-  height:1000px;
+  width: 80%;
+  
   margin: auto;
   margin-top: 50px;
   margin-bottom: 80px;
@@ -49,8 +49,8 @@ h1
 {
   display: flex;
   justify-content: space-between;
-  margin-left: 20%;
-  margin-right: 10%;
+  width: 70%;
+  margin: auto;
 }
 p
 {
@@ -75,7 +75,7 @@ a
   text-align: center;
   font-size: 1.4em;
   font-family: 'Caveat', cursive;
-  font-style: none;
+  
 
 }
 
@@ -104,7 +104,7 @@ a
   animation-name:wiggle;
   animation-duration:1000ms;
   animation-iteration-count:1;
-  animation-timing-function:1;
+  
 
   }
 
