--- a/style_menu_b.css
+++ b/style_menu_b.css
@@ -26,8 +26,8 @@ header /*ohmyfood logo*/
 #container /*Main menu*/
 {
   	
-  width: 60%;
-  height:1000px;
+  width: 90%;
+  height:1100px;
   margin: auto;
   margin-top: 30px;
 
@@ -73,8 +73,8 @@ a
 {
   display: flex;
   justify-content: space-between;
-  margin-left : 80px;
-  margin-right: 80px;
+  width: 55%;
+  margin: auto;
   font-size: 1.2em;
 }
 
@@ -197,9 +197,46 @@ footer
   }
   .entree, .plat, .dessert
   {
-    width: 75%;
+    width: 90%;
     
   }
+  img
+  {
+    display: none;
+  }
+  h2
+  {
+    margin-top: 40px;
+  }
+  h1
+  {
+    padding-top: 20px;
+  }
+   .btn_mentions, .btn_contact /*wiggle animation*/
+{
+  
+  animation-name:wiggle;
+  animation-duration:1000ms;
+  animation-iteration-count:infinite;
+}
+
+
+@keyframes wiggle 
+{
+  0% {transform: rotate(1deg);}
+  5% {transform: rotate(-1deg);}
+  10%{transform: rotate(5deg);}
+  15%{transform: rotate(-5deg);}
+  20%{transform: rotate(1deg);}
+  25% {transform: rotate(-1deg);}
+  40%{transform: rotate(5deg);}
+  45%{transform: rotate(-5deg);}
+  50% {transform: rotate(10deg);}
+  60%{transform: rotate(-10deg);}
+  75% {transform: rotate(-5deg);}
+  100% {transform: rotate(0deg);}
+}
 
 }
+
 
