--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ img
 {
 	width: 20%;
 	margin-bottom: -30px;
-	padding-top: 10px;
+	padding-top: 1px;
+	padding-bottom: 20px;
 }
 #container
 {
@@ -133,7 +134,7 @@ img
 
 
 @keyframes type{
-	0%, 60%, 100% {
+	30%, 50%, 100%{
 	transform: initial;
 	}
 	30% {
@@ -141,19 +142,19 @@ img
 	}
 }
 
-.opacity:hover /*animation zoom opacity*/
+.opacity:hover  /*animation zoom opacity*/
 {
 	
-	transform: scale(1.1);
-	transition: .6s;
+	transform: scale(1.2);
+	transition-duration: 0.5s;
 	animation: ease-in-out;
-	opacity: 1.5;
+	opacity: 0.5;
 
 }
 .opacity
 {
 	text-align: center;
-	opacity: 0.7;
+	
 }
 
 
@@ -206,17 +207,20 @@ a
 }
 
 	@keyframes wiggle {
-  0% {transform: rotate(1deg);}
-  5% {transform: rotate(-1deg);}
+  0% {transform: rotate(5deg);}
+  5% {transform: rotate(-5deg);}
   10%{transform: rotate(5deg);}
   15%{transform: rotate(-5deg);}
-  20%{transform: rotate(1deg);}
-  25% {transform: rotate(-1deg);}
+  20%{transform: rotate(5deg);}
+  25% {transform: rotate(-5deg);}
   40%{transform: rotate(5deg);}
   45%{transform: rotate(-5deg);}
-  50% {transform: rotate(10deg);}
-  60%{transform: rotate(-10deg);}
+  50% {transform: rotate(5deg);}
+  60%{transform: rotate(-5deg);}
+  70%{transform: rotate(5deg);}
   75% {transform: rotate(-5deg);}
+  80% {transform: rotate(5deg);}
+  90%{transform: rotate(-5deg);}
   100% {transform: rotate(0deg);}
 }
 
