--- a/style_menu_a.css
+++ b/style_menu_a.css
@@ -1,79 +1,64 @@
-body
-{
-  margin: 0;
-  padding: 0;
-  position: relative;
-}
-
-header /*ohmyfood logo*/
-{
-	display: flex;
-  justify-content: center;
-  font-size: 2em;
-  padding: 10px;
-  height: 60px;
-  margin: auto;
-  padding-top: 15px;
-  font-family: 'Roboto', sans-serif;
-  background-color: #389c75;
-  color: #ffd633;
-  align-self: center;
-}
-
-h1
-{
-  text-align: center;
-  margin: auto;
-  padding-top: 50px;
-  font-family: 'Roboto', sans-serif;
-  font-size: 1.5em;
-}
-
 h2
 {
   text-align: center;
   padding-top: 20px;
-  font-family: 'Devonshire', cursive;
+  font-family: 'Roboto', sans-serif;
   padding-top: 60px;
- 
 }
+
 h3
-{
+{ padding-top:  30px;
   text-align: center;
-  font-size: 1.4em;
+  font-size: 2em;
+  font-family: 'Devonshire', cursive;
 }
+
+h4
+{
+  padding: 40px;
+  margin: 5px;
+  text-align: center;
+  font-size: 1.5em;
+}
+
+.end
+{
+  font-family: 'Devonshire', cursive;
+  display: flex;
+  justify-content: center;
+  font-size: 1.3em;
+}
+
 #container
 {
-    
   width: 80%;
   margin: auto;
   margin-top: 30px;
   margin-bottom: 80px;
-  background-color:#ffcccc
+  background-color:rgb(252,223,219);  
 }
+
 .entree,.dessert, .plat
 {
   display: flex;
   justify-content: space-between;
   width: 60%;
   margin: auto;
-
 }
 img
 {
-  width: 20%;
-  
- 
+  width: 25%;
 }
+
 .note
 {
-  width: 5%;
+  width: 8%;
 }
 .note_bis
 {
-  width: 3%;
+  width: 4%;
+  height: 4%;
 }
-
 
 p
 {
@@ -81,25 +66,11 @@ p
   font-size: 1.3em;
 }
 
- 
-
 a
 {
   text-decoration: none;
   color: inherit;
 }
-
-h4
-{
-  font-family: 'Devonshire', cursive;
-  padding: 40px;
-  margin: 5px;
-  
-  text-align: center;
-  font-size: 1.5em;
-}
-
-
 
 .prelude:after { /*underline animation*/
   content: '';
@@ -143,52 +114,7 @@ h4
   width: 23%;
   background: #444;
 }
-.btn_contact,.btn-mentions
-{
-  margin-right: 30px;
-}
 
-.btn_mentions:hover, .btn_contact:hover/*wiggle animation*/
-{
-  
-  animation-name:wiggle;
-  animation-duration: 1000ms;
-  animation-iteration-count:1;
-  
-
-}
-
-@keyframes wiggle 
-{
-  0% {transform: rotate(1deg);}
-  5% {transform: rotate(-1deg);}
-  10%{transform: rotate(5deg);}
-  15%{transform: rotate(-5deg);}
-  20%{transform: rotate(1deg);}
-  25% {transform: rotate(-1deg);}
-  40%{transform: rotate(5deg);}
-  45%{transform: rotate(-5deg);}
-  50% {transform: rotate(10deg);}
-  60%{transform: rotate(-10deg);}
-  75% {transform: rotate(-5deg);}
-  100% {transform: rotate(0deg);}
-}
-
-footer
-{
-  display: flex;
-  justify-content: space-between;
-  font-size: 1em;
-  width: 100%;
-  margin-top: 5px;
-  margin: auto;
-  padding: 5px;
-  background-color: #389c75;
-  color: #ffd633;
-  font-family: 'Roboto', sans-serif;
-  position: fixed;
-  bottom: 0;
-}
 @media screen and (max-width: 425px)/*responsive design mobile*/
 {
   body
@@ -205,25 +131,28 @@ footer
   {
     display: none;
   }
-  h1
-  { 
-    margin-top: -20px; 
-    font-size: 1.2em;
-  }
+  
   .entree, .plat, .dessert
   {
     width: 90%;
     margin: 10px;
   }
-  footer
-  {
-    display: block;
-  }
-  
+ 
 
 }
 
 
 
+
+
+
+
+
+
+
   
+
+
+
+
 
