--- a/style_menu_c.css
+++ b/style_menu_c.css
@@ -1,40 +1,3 @@
-body
-{
-  margin: 0;
-  padding: 0;
-  position: relative;
-}
-
-header /*ohmyfood logo*/
-{
-	display: flex;
-  justify-content: center;
-  font-size: 2em;
-  padding: 10px;
-  height: 60px;
-  margin: auto;
-  padding-top: 15px;
-  font-family: 'Roboto', sans-serif;
-  background-color: #389c75;
-  color: #ffd633;
-  align-self: center;
- }
-
-h1
-{
-  text-align: center;
-  margin: auto;
-  padding-top: 50px;
-  margin-bottom: 70px;
-  font-family: 'Dancing Script', cursive;
-  font-size: 2.5em;
-  background: linear-gradient(#0000b3,#0000ff,#80dfff );
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-   
-}
-
-
 #container
 {
   width: 85%;
@@ -42,7 +5,26 @@ h1
   margin: auto;
   margin-top: 50px;
   margin-bottom: 80px;
-  background-color: #f0f5f5;
+  background-color: rgb(237,239,239);
+}
+
+h2
+{
+   background: -webkit-linear-gradient(left,rgb(2,40,221),rgb(6,112,243),rgb(34,157,249));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 3.5em;
+  font-family: 'Dancing Script', cursive;
+  text-align: center;
+  padding-top: 100px;
+  padding-bottom: 80px;
+}
+
+h3
+{
+  font-weight: normal;
+  font-size: 1.6em;
+  font-family: 'Caveat', cursive;
 }
 
 .entree, .plat, .dessert
@@ -52,11 +34,13 @@ h1
   width: 60%;
   margin: auto;
 }
+
 p
 {
   font-family: 'Caveat', cursive;
   font-size: 1.3em;
 }
+
 img
 { 
   width: 20%;
@@ -64,19 +48,9 @@ img
   padding-left: 10px;
 }
 
-a
-{
-  text-decoration: none;
-  color: inherit;
-}
-
-.title, h2
+.title
 {
   text-align: center;
-  font-size: 1.4em;
-  font-family: 'Caveat', cursive;
-  
-
 }
 
 .title:after { /*underline animation*/
@@ -93,51 +67,7 @@ a
   width: 15%;
   background: #444;
 }
-.btn_contact,.btn-mentions
-{
-  margin-right: 30px;
-}
 
-.btn_mentions:hover, .btn_contact:hover/*wiggle animation*/
-{
-  
-  animation-name:wiggle;
-  animation-duration:1000ms;
-  animation-iteration-count:1;
-  
-
-  }
-
-  @keyframes wiggle {
-  0% {transform: rotate(1deg);}
-  5% {transform: rotate(-1deg);}
-  10%{transform: rotate(5deg);}
-  15%{transform: rotate(-5deg);}
-  20%{transform: rotate(1deg);}
-  25% {transform: rotate(-1deg);}
-  40%{transform: rotate(5deg);}
-  45%{transform: rotate(-5deg);}
-  50% {transform: rotate(10deg);}
-  60%{transform: rotate(-10deg);}
-  75% {transform: rotate(-5deg);}
-  100% {transform: rotate(0deg);}
-}
-
-footer
-{
-  display: flex;
-  justify-content: space-between;
-  font-size: 1em;
-  width: 100%;
-  margin-top: 5px;
-  margin: auto;
-  padding: 5px;
-  background-color: #389c75;
-  color: #ffd633;
-  font-family: 'Roboto', sans-serif;
-  position: fixed;
-  bottom: 0;
-}
 @media screen and (max-width: 425px)/*responsive design mobile*/
 {
   #container
@@ -151,6 +81,12 @@ footer
     width: 90%;
     
   }
+  h2
+  {
+    font-size: 2.4em;
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
   img
   {
     display: none;
@@ -160,6 +96,10 @@ footer
     display: block;
   }
 }
+
+
+
+
 
 
   
