--- a/style.css
+++ b/style.css
@@ -139,6 +139,20 @@ img
 {
 	background-color:rgb(252,223,219);
 }
+.menu_b
+{
+	background-color:rgb(255,245,254);
+}
+
+.menu_c
+{
+	background-color:rgb(249,249,249);
+}
+
+.menu_d
+{
+	background-color:rgb(253,255,253);
+}
 
 .prochainement
 {
